<resources>
    <string name="app_name">ctm</string>
    <string name="login_account_hint">账号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_login">登录</string>
    <string name="login_forgetpw">忘记密码?</string>
    <string name="login_no_account">没有账号?</string>
    <string name="login_goto_registered">在这里注册</string>

    <string name="register_register">注册账号</string>
    <string name="register_phone">手机号码</string>
    <string name="register_phone_hint">请输入11位的手机号码</string>
    <string name="register_nickname">昵称</string>
    <string name="register_nickname_hint">昵称长度应在4~16个字符之间</string>
    <string name="register_password">密码</string>
    <string name="register_password_hint">密码长度应在6~12个字符之间</string>
    <string name="register_rpassword">确认密码</string>
    <string name="register_rpassword_hint">密码长度应在6~12个字符之间</string>
    <string name="register_code">验证码</string>
    <string name="register_code_hint">输入手机收到的验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_node">我已经认真阅读并同意来找我的</string>
    <string name="register_agreement">《使用协议》</string>
    <string name="history">搜索历史</string>
    <string name="hot">热门搜索</string>
    <string name="all_cate">全部分类</string>

    <string name="bnv_res">找资源</string>
    <string name="bnv_req">需求</string>
    <string name="bnv_chat">聊天</string>
    <string name="bnv_person">我</string>

    <string name="person_res">我的资源</string>
    <string name="person_req">我的需求</string>
    <string name="person_collect">我的收藏</string>
    <string name="person_about_me">关于我</string>
    <string name="person_edit">编辑</string>
    <string name="person_me">我的</string>

    <string name="del">删除</string>
    <string name="solve">解决了</string>
    <string name="solved">已解决</string>
    <string name="addFriend">添加好友</string>

    <string name="edit_user_inf_title">我的资料</string>
    <string name="edit_user_inf_portrait">头像</string>
    <string name="edit_user_inf_nickname">昵称</string>
    <string name="edit_user_inf_sex">性别</string>
    <string name="edit_user_inf_birth">生日</string>
    <string name="edit_user_inf_hometown">家乡</string>
    <string name="edit_user_inf_signal">签名</string>
    <string name="edit_user_inf_signal_hint">有个性,没签名.</string>
    <string name="detail">详情</string>


    <string name="person_info">个人信息</string>
    <string name="person_auth">认证信息</string>
    <string name="person_contact">联系方式</string>

    <string name="set_title">设置</string>
    <string name="set_help">帮助与反馈</string>
    <string name="set_about">关于来找我</string>
    <string name="set_logout">切换账号</string>

    <string name="res_search_hint">输入你要查找的内容</string>

    <string name="text">原标题：庆祝改革开放40周年大会在京隆重举行 习近平发表重要讲话

　　新华社北京12月18日电 庆祝改革开放40周年大会18日上午在北京人民大会堂隆重举行。中共中央总书记、国家主席、中央军委主席习近平在大会上发表重要讲话。

12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。中共中央总书记、国家主席、中央军委主席习近平在大会上发表重要讲话。 新华社记者 姚大伟 摄　　12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。中共中央总书记、国家主席、中央军委主席习近平在大会上发表重要讲话。 新华社记者 姚大伟 摄
　　习近平强调，40年的实践充分证明，党的十一届三中全会以来我们党团结带领全国各族人民开辟的中国特色社会主义道路、理论、制度、文化是完全正确的，形成的党的基本理论、基本路线、基本方略是完全正确的。

　　习近平强调，40年的实践充分证明，中国发展为广大发展中国家走向现代化提供了成功经验、展现了光明前景，是促进世界和平与发展的强大力量，是中华民族对人类文明进步作出的重大贡献。

　　习近平强调，40年的实践充分证明，改革开放是党和人民大踏步赶上时代的重要法宝，是坚持和发展中国特色社会主义的必由之路，是决定当代中国命运的关键一招，也是决定实现“两个一百年”奋斗目标、实现中华民族伟大复兴的关键一招。

　　李克强、栗战书、汪洋、王沪宁、赵乐际、韩正、王岐山出席大会。

12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。习近平、李克强、栗战书、汪洋、王沪宁、赵乐际、韩正、王岐山等出席大会。 新华社记者 鞠鹏 摄　　12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。习近平、李克强、栗战书、汪洋、王沪宁、赵乐际、韩正、王岐山等出席大会。 新华社记者 鞠鹏 摄
　　人民大会堂雄伟庄严，万人大礼堂灯火辉煌、气氛热烈。主席台上方悬挂着“庆祝改革开放40周年大会”会标，后幕正中是中华人民共和国国徽和“1978-2018”字标，10面红旗分列两侧。

　　当习近平等领导同志进入会场，全场起立，热烈鼓掌。

　　10时，李克强宣布庆祝大会开始。全体起立，高唱国歌。

　　王沪宁宣读《中共中央　国务院关于表彰改革开放杰出贡献人员的决定》。决定指出，党中央、国务院决定，授予于敏等100名同志改革先锋称号，颁授改革先锋奖章；为感谢国际社会对中国改革开放事业的支持和帮助，向阿兰·梅里埃等10名国际友人颁授中国改革友谊奖章。大会宣读了授予改革先锋称号、中国改革友谊奖章人员名单。

　　在《春天的故事》乐曲声中，习近平等为获得改革先锋称号、中国改革友谊奖章人员代表颁奖。

　　全体起立，热烈鼓掌，向受表彰人员表示衷心祝贺和崇高敬意。少先队员向他们献上美丽的鲜花。

12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。中共中央总书记、国家主席、中央军委主席习近平在大会上发表重要讲话。这是习近平等为获得改革先锋称号人员代表颁奖。 新华社记者 燕雁 摄　　12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。中共中央总书记、国家主席、中央军委主席习近平在大会上发表重要讲话。这是习近平等为获得改革先锋称号人员代表颁奖。 新华社记者 燕雁 摄
　　在热烈的掌声中，习近平发表重要讲话。他强调，我们党作出实行改革开放的历史性决策，是基于对党和国家前途命运的深刻把握，是基于对社会主义革命和建设实践的深刻总结，是基于对时代潮流的深刻洞察，是基于对人民群众期盼和需要的深刻体悟。改革开放是我们党的一次伟大觉醒，正是这个伟大觉醒孕育了我们党从理论到实践的伟大创造。改革开放是中国人民和中华民族发展史上一次伟大革命，正是这个伟大革命推动了中国特色社会主义事业的伟大飞跃。

　　习近平指出，建立中国共产党、成立中华人民共和国、推进改革开放和中国特色社会主义事业，是五四运动以来我国发生的三大历史性事件，是近代以来实现中华民族伟大复兴的三大里程碑。以毛泽东同志为主要代表的中国共产党人，完成了新民主主义革命，建立了中华人民共和国，为当代中国一切发展进步奠定了根本政治前提和制度基础。以邓小平同志为主要代表的中国共产党人，作出把党和国家工作中心转移到经济建设上来、实行改革开放的历史性决策，成功开创了中国特色社会主义。以江泽民同志为主要代表的中国共产党人，确立了社会主义市场经济体制的改革目标和基本框架，开创全面改革开放新局面，成功把中国特色社会主义推向21世纪。以胡锦涛同志为主要代表的中国共产党人，强调坚持以人为本、全面协调可持续发展，推进党的执政能力建设和先进性建设，成功在新的历史起点上坚持和发展了中国特色社会主义。

　　习近平强调，党的十八大以来，党中央团结带领全党全国各族人民，全面审视国际国内新的形势，通过总结实践、展望未来，深刻回答了新时代坚持和发展什么样的中国特色社会主义、怎样坚持和发展中国特色社会主义这个重大时代课题，形成了新时代中国特色社会主义思想，坚持统筹推进“五位一体”总体布局、协调推进“四个全面”战略布局，坚持稳中求进工作总基调，对党和国家各方面工作提出一系列新理念新思想新战略，推动党和国家事业发生历史性变革、取得历史性成就，中国特色社会主义进入了新时代。

　　习近平指出，艰难困苦，玉汝于成。40年来，我们解放思想、实事求是，大胆地试、勇敢地改，干出了一片新天地。改革开放40年来，从开启新时期到跨入新世纪，从站上新起点到进入新时代，40年风雨同舟，40年披荆斩棘，40年砥砺奋进，我们党引领人民绘就了一幅波澜壮阔、气势恢宏的历史画卷，谱写了一曲感天动地、气壮山河的奋斗赞歌。　

12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。中共中央总书记、国家主席、中央军委主席习近平在大会上发表重要讲话。这是习近平鼓掌向受表彰人员表示祝贺。 新华社记者 谢环驰 摄　　12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。中共中央总书记、国家主席、中央军委主席习近平在大会上发表重要讲话。这是习近平鼓掌向受表彰人员表示祝贺。 新华社记者 谢环驰 摄
　　习近平从理论创新、经济建设、政治建设、文化建设、社会建设、生态文明建设、国防和军队建设、祖国统一、外交工作、党的建设等方面总结了改革开放的伟大成就。他强调，40年来取得的成就不是天上掉下来的，更不是别人恩赐施舍的，而是全党全国各族人民用勤劳、智慧、勇气干出来的。我们用几十年时间走完了发达国家几百年走过的工业化历程。在中国人民手中，不可能成为了可能。我们为创造了人间奇迹的中国人民感到无比自豪、无比骄傲。

　　习近平指出，改革开放40年积累的宝贵经验是党和人民弥足珍贵的精神财富，对新时代坚持和发展中国特色社会主义有着极为重要的指导意义，必须倍加珍惜、长期坚持，在实践中不断丰富和发展。一是必须坚持党对一切工作的领导，不断加强和改善党的领导，增强“四个意识”、坚定“四个自信”，坚决维护党中央权威和集中统一领导，确保改革开放这艘航船沿着正确航向破浪前行。二是必须坚持以人民为中心，不断实现人民对美好生活的向往，顺应民心、尊重民意、关注民情、致力民生，让人民共享改革开放成果，激励人民更加自觉地投身改革开放和社会主义现代化建设事业。三是必须坚持马克思主义指导地位，不断推进实践基础上的理论创新，及时回答时代之问、人民之问，不断开辟马克思主义发展新境界。四是必须坚持走中国特色社会主义道路，不断坚持和发展中国特色社会主义，牢牢把握改革开放的前进方向。五是必须坚持完善和发展中国特色社会主义制度，不断发挥和增强我国制度优势，推动中国特色社会主义制度更加成熟更加定型。六是必须坚持以发展为第一要务，不断增强我国综合国力，推动经济社会持续健康发展，为坚持和发展中国特色社会主义、实现中华民族伟大复兴奠定雄厚物质基础。七是必须坚持扩大开放，不断推动共建人类命运共同体，高举和平、发展、合作、共赢的旗帜，维护国际公平正义，倡导国际关系民主化，积极参与全球治理体系改革和建设，促进贸易投资自由化便利化。八是必须坚持全面从严治党，不断提高党的创造力、凝聚力、战斗力，不断增强党的政治领导力、思想引领力、群众组织力、社会号召力，坚决清除一切腐败分子，确保党始终保持同人民群众的血肉联系。九是必须坚持辩证唯物主义和历史唯物主义世界观和方法论，坚持问题导向，正确处理改革发展稳定关系，既鼓励大胆试、大胆闯，又坚持实事求是、善作善成，确保改革开放行稳致远。

　　习近平强调，我们要全面贯彻新时代党的强军思想，坚持党对军队的绝对领导，坚持走中国特色强军之路，全面深化国防和军队改革，建设一支听党指挥、能打胜仗、作风优良的人民军队，努力建设世界一流军队，为维护国家主权、安全、发展利益，为维护世界和平稳定，为实现中华民族伟大复兴提供坚强后盾。

　　习近平指出，我们要全面准确贯彻“一国两制”、“港人治港”、“澳人治澳”、高度自治的方针，严格按照宪法和基本法办事，支持和推动香港、澳门更好融入国家发展大局，让香港、澳门同胞同祖国人民共担民族复兴的历史责任、共享祖国繁荣富强的伟大荣光。实现祖国完全统一，是全体中华儿女共同心愿，是中华民族根本利益所在。我们要坚持一个中国原则和“九二共识”，巩固和发展两岸关系和平发展的基础，深化两岸经济文化交流合作，造福两岸同胞。

　　习近平强调，伟大梦想不是等得来、喊得来的，而是拼出来、干出来的。我们现在所处的，是一个船到中流浪更急、人到半山路更陡的时候，是一个愈进愈难、愈进愈险而又不进则退、非进不可的时候。改革开放已走过千山万水，但仍需跋山涉水，摆在全党全国各族人民面前的使命更光荣、任务更艰巨、挑战更严峻、工作更伟大。在这个千帆竞发、百舸争流的时代，我们绝不能有半点骄傲自满、固步自封，也绝不能有丝毫犹豫不决、徘徊彷徨，必须统揽伟大斗争、伟大工程、伟大事业、伟大梦想，勇立潮头、奋勇搏击。

　　习近平指出，在近代以来漫长的历史进程中，中国人民经历了太多太多的磨难，付出了太多太多的牺牲，进行了太多太多的拼搏。现在，中国人民和中华民族在历史进程中积累的强大能量已经充分爆发出来了，为实现中华民族伟大复兴提供了势不可挡的磅礴力量。全党全国各族人民要更加紧密地团结在党中央周围，高举中国特色社会主义伟大旗帜，不忘初心，牢记使命，将改革开放进行到底，不断实现人民对美好生活的向往，在新时代创造中华民族新的更大奇迹，创造让世界刮目相看的新的更大奇迹。

　　李克强在主持大会时说，习近平总书记的重要讲话，深刻总结了改革开放40年来党和国家事业取得的伟大成就和宝贵经验，高度赞扬了中国人民为改革开放事业作出的杰出贡献，郑重宣示了改革开放只有进行时没有完成时、改革开放永远在路上、坚定不移将改革进行到底的信心和决心，明确提出了坚定不移全面深化改革、扩大对外开放、不断把新时代改革开放继续推向前进的目标要求。让我们更加紧密地团结在以习近平同志为核心的党中央周围，高举中国特色社会主义伟大旗帜，不忘初心、牢记使命，持续深入推进改革开放，为实现“两个一百年”奋斗目标、建成富强民主文明和谐美丽的社会主义现代化强国、实现中华民族伟大复兴的中国梦，为维护世界和平、促进共同发展、推动构建人类命运共同体而不懈奋斗。

12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。中共中央总书记、国家主席、中央军委主席习近平在大会上发表重要讲话。这是庆祝大会结束后，习近平等会见受表彰人员及亲属代表。 新华社记者 鞠鹏 摄　　12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。中共中央总书记、国家主席、中央军委主席习近平在大会上发表重要讲话。这是庆祝大会结束后，习近平等会见受表彰人员及亲属代表。 新华社记者 鞠鹏 摄
　　庆祝大会结束后，习近平等会见了受表彰人员及亲属代表，并同大家合影留念。

　　在京中共中央政治局委员、中央书记处书记，全国人大常委会副委员长，国务委员，最高人民法院院长，最高人民检察院检察长，全国政协副主席以及中央军委委员出席大会。

　　中央党政军群各部门和北京市主要负责同志，各民主党派中央、全国工商联负责人和无党派人士代表，老党员、老干部代表，改革开放杰出贡献受表彰人员及亲属代表，港澳同胞、台湾同胞、海外侨胞及归侨、侨眷代表，首都各界群众代表，解放军和武警部队官兵代表，各国驻华使节、各国际组织驻华代表和在华工作的外国专家代表等约3000人参加大会。

12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。中共中央总书记、国家主席、中央军委主席习近平在大会上发表重要讲话。这是习近平在主席台向全场致意。 新华社记者 鞠鹏 摄　　12月18日，庆祝改革开放40周年大会在北京人民大会堂隆重举行。中共中央总书记、国家主席、中央军委主席习近平在大会上发表重要讲话。这是习近平在主席台向全场致意。 新华社记者 鞠鹏 摄</string>
    <string name="choose_cate">请选择信息类型</string>
    <string name="resource">资源</string>
    <string name="need">需求</string>

    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="confirm_password">确认密码</string>
    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
</resources>
