<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal|bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="45dp"
        >
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:alpha="0.3"
            android:layout_height="match_parent"

            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/login_car_bg">
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="25dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/register_register"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/register_phone"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                android:hint="@string/register_phone_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/register_nickname"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/register_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                android:hint="@string/register_nickname_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/register_password"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                android:hint="@string/register_password_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/register_rpassword"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/register_rpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                android:hint="@string/register_rpassword_hint"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/register_code"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/register_code"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="12sp"
                    android:hint="@string/register_code_hint"/>
                <Button
                    android:id="@+id/register_get_code"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:background="@drawable/register_bt_shape"
                    android:text="@string/register_get_code"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_ok_little_while"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:text="@string/register_node"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:textSize="10sp"
                    android:text="@string/register_agreement"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:gravity="top|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <!--<ImageView-->
            <!--android:id="@+id/register_register"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:src="@drawable/ic_ok_big_green"/>-->
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:id="@+id/register_register"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:background="@drawable/login_bt_shape">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="注册"
                android:textColor="@color/white"
                android:textSize="13sp" />
            <LinearLayout
                android:id="@+id/ll_register"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:text="注册中"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ProgressBar
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>