<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.ms_square.etsyblur.BlurringView
        android:id="@id/blurring_view"
        android:layout_width="match_parent"
        app:radius="25"
        app:overlayColor="#80eeeeee"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/rl_pop"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/choose_cate"
            android:layout_marginTop="100dp"/>

        <TextView
            android:id="@+id/tv_resource"
            android:text="@string/resource"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/shape_cate_resource"
            android:layout_below="@id/tv_pop"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tv_need"
            android:text="@string/need"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/shape_cate_need"
            android:layout_below="@id/tv_resource"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/rv_cate"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/rel_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="15dp"
            android:src="@drawable/ic_delete_no_trim" />
    </RelativeLayout>

</RelativeLayout>
